xx May 2008: 0.6.0 Miek <miek@miek.nl>
  -- i18n added --
 * i18n support added, but nothing is translated yet
   - this is for the perl scripts and the rdup core
   - shell scripts do not use i18n
 * hardlink support
   - symlink has also changed to support this
   - each link is printed as 'link -> target'
   - hardlinks have the file type 'h'
   - now we have: -, d, l and h types
 * implemented gettext for i18n and added Dutch as
   a language for rdup, the perl utils, but not the shell
   scripts. Those can be easily rewritten in another language
 * exit ./configure when glib2-dev is not found
 * substract the filesize when files are removed in rdup-snap
 * remove last remnants of syslog from shared.pl.in
 * fixed example cron.rdup
 * use here docs in the shell script usage
 * update rdup-restore and removed rdup-snap-here
 * documentation updates and assorted tweaks


19 Mar 2008: 0.5.7 Miek <miek@miek.nl>
 -- spring cleaning --
 * removed rdup-purge, this can be done in a shell oneliner
 * removed sh-tools/ as it was already deprecated
 * added rdup-hist to show files from the backup and copy, cat
   or diff them. Also see rdup-hist.1
 * Remove syslogging from rdup-snap for the sake of simplicity.
   It also gave troubles on Mac OS X.
 * make the rdup-backups.1 page look nicer
   

15 Mar 2008: 0.5.6 Miek <miek@miek.nl>
 -- Bugfixes and documentation improvements --
 * Document the use of /dev/null better in rdup.1
 * Knut Franke: generate rdup-backups.1 from configure.ac
 * fixup relative pathname argument in conjunction 
   with the -E (exclude) option (reported by Dave Foster)
   Added: abspath.c


12 Feb 2008: 0.5.5 Miek <miek@miek.nl>
 -- code cleanups and license change: GPL 3 --
 * Changed license to GPL 3
 * Print the octal mode (%b) with 4 digits to also allow
    for the correct transfer of sgid/suid/sticky bits.
 * Add support in rdup-snap/rdup-simple for hourly backups
 * Cleanup the perl code
 * Fixup the documentation

