@@ -4,8 +4,9 @@ xx May 2008: 0.6.0 Miek <miek@miek.nl>
    - this is for the perl scripts and the rdup core
    - shell scripts do not use i18n
  * hardlink support
-   - symlink has also changed to support this
+   - symlink output has also changed to support this
    - each link is printed as 'link -> target'
+   - filesize is overload to take the length of 'link' in this case
    - hardlinks have the file type 'h'
    - now we have: -, d, l and h types
  * implemented gettext for i18n and added Dutch as
